[project]
name = "SpeakMcpServer"
version = "1.0.0"
description = "Speak MCP Server: A text-to-speech MCP server"
requires-python = ">=3.12"
dependencies = ["mcp[cli]>=1.4.1", "requests>=2.25.0", "pygame>=2.0.0"]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]